About: A p5.js tropical cyclone simulation game

v20181216a:
    + Added "Total ACE" counter to season stats
v20181215a:
    + Added "Jump to" button to side panel, which (while paused) "jumps" analysis to a specific point
        > In season stats, jumps to the beginning of the targeted year
        > In storm stats, jumps to when the targeted system first formed as a disturbance
v20181207a:
    + Added counter for category 5s in season stats
v20181203c:
    + Added arrow buttons to side panel for navigating through season stats
        > Greyed out when viewing storm stats or if there is no season to navigate to
v20181203b:
    + Added viewing season stats in storm info side panel
        > Click drop arrow button without storm selected to access
    + Added drop arrow button for toggling the side panel next to the pause button
        > Replaces the side panel "X" for closing it
v20181203a:
    * Cleaned up the code:
        > Deleted defunct commented-out code
        > Moved various functions from sketch.js to more appropriate files (including the newly-added misc.js)
v20181202a:
    + Added text wrapping for storm info panel
    * constant-ified UI colors (plus some color tweaks)
    * Storm info panel no longer directly tied to selected storm
        > Now has its own "target" storm that changes in tandem upon clicking a storm icon
    * Fixed glitch with mouse-hover over overlapping UI elements
v20181201a:
    + Added an "extended storm info" UI box accessible by clicking the info text in the upper right while a storm is selected
        > Needs some work
v20181129a:
    > Graduated /experiments!
    * Renamed to "Cyclone Simulator"
    * Appropriate adjustments to main menu
    * Moved to new repository at a new URL
    * Copied over required files from /experiments directly into this project's directory
v20181128a:
    + Added constants for title and version number