@@ -1,5 +1,8 @@
 About: A p5.js tropical cyclone simulation game
 
+v20181217a:
+    + Added damage and deaths, including counters in storm and season stats
+        > The damage/deaths algorithm is rudimentary and may need change
 v20181216a:
     + Added "Total ACE" counter to season stats
 v20181215a:
